--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
+    <title>Higher / Lower Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
